# easy-sdl

./: CMakeLists.txt  README.md
examples/: hello_edl.cpp
include/: easy_sdl.h  easy_sdl_defaults.h  easy_sdl_types.h
src/: easy_sdl.cpp
